Added Buttons using Html and JS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Buttons with div practice</h1>
+
+    <div id="div1">Here is div 1</div>
+
+    <div id="div2">Hiere is div 2</div>
+
+    <input type="button" value="change" onclick="dochange()" />
+
+    <input type="button" value="Try It" onclick="tryNow()" />
+    <p id="demo"></p>
+
     <script src="./JS/main.js"></script>
   </body>
 </html>
