Change text info

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <input type="button" value="change" onclick="dochange()" />
 
     <input type="button" value="Try It" onclick="tryNow()" />
-    <p id="demo"></p>
+
+    <p id="demo">
+      Click the button "Try It" to change the text in this paragraph.
+    </p>
 
     <script src="./JS/main.js"></script>
   </body>
