Function and Html from StakOverFlow

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       Click the button "Try It" to change the text in this paragraph.
     </p>
 
+    <p>Click the button to check the age.</p>
+
+    Age:<input id="age" value="18" />
+    <p>Old enough to vote?</p>
+    <button onclick="myFunction()">Try it</button>
+
+    <p id="dem"></p>
+
     <script src="./JS/main.js"></script>
   </body>
 </html>
