--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 
     <p id="dem"></p>
 
+    <section>
+      <div id="d1">Hello</div>
+
+      <div id="d2">Goodbye</div>
+
+      <input type="button" value="color change" onclick="changecolor()" />
+      <!-- onclick is event handler -->
+    </section>
     <script src="./JS/main.js"></script>
   </body>
 </html>
