Channgetext using Html and JS

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <div id="d2">Goodbye</div>
 
       <input type="button" value="color change" onclick="changecolor()" />
+
+      <input type="button" value="text change" onclick="changetext()" />
       <!-- onclick is event handler -->
     </section>
     <script src="./JS/main.js"></script>
