Change-text-color using Html and JS

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       <input type="button" value="color change" onclick="changecolor()" />
 
       <input type="button" value="text change" onclick="changetext()" />
+
+      <input
+        type="button"
+        value="text color change"
+        onclick="changetextcolor()"
+      />
+
       <!-- onclick is event handler -->
     </section>
     <script src="./JS/main.js"></script>
